--- a/MagitWeb/web/WEB-INF/web.xml
+++ b/MagitWeb/web/WEB-INF/web.xml
@@ -181,4 +181,12 @@
         <servlet-name>PullServlet</servlet-name>
         <url-pattern>/Pages/RepositoryPage/PullServlet</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>DeleteBranchServlet</servlet-name>
+        <servlet-class>servlets.DeleteBranchServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DeleteBranchServlet</servlet-name>
+        <url-pattern>/Pages/RepositoryPage/DeleteBranchServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
